// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/ConfigurationBar should match snapshot, expired 1`] = `
<div>
  <div
    class="_StyledDiv-BZhus eMNHXM announcement-bar announcement-bar-critical"
  >
    <div
      class="announcement-bar__text"
    >
      <span>
        <div
          class="announcement-bar__configuration"
        >
          <img
            class="advisor-icon"
            src=""
          />
          Enterprise license is expired and some features may be disabled.
          <button
            class="btn btn-tertiary btn-xs btn-inverted annnouncementBar__renewLicense"
          >
            Contact sales
          </button>
        </div>
      </span>
    </div>
    <a
      class="announcement-bar__close"
      href="#"
    >
      ×
    </a>
  </div>
</div>
`;

exports[`components/ConfigurationBar should match snapshot, expired, cloud license, show nothing 1`] = `<div />`;

exports[`components/ConfigurationBar should match snapshot, expired, in grace period 1`] = `
<div>
  <div
    class="_StyledDiv-BZhus eMNHXM announcement-bar announcement-bar-critical"
  >
    <div
      class="announcement-bar__text"
    >
      <span>
        <div
          class="announcement-bar__configuration"
        >
          <img
            class="advisor-icon"
            src=""
          />
          Enterprise license is expired and some features may be disabled.
          <button
            class="btn btn-tertiary btn-xs btn-inverted annnouncementBar__renewLicense"
          >
            Contact sales
          </button>
        </div>
      </span>
    </div>
    <a
      class="announcement-bar__close"
      href="#"
    >
      ×
    </a>
  </div>
</div>
`;

exports[`components/ConfigurationBar should match snapshot, expired, regular user 1`] = `
<div>
  <div
    class="_StyledDiv-BZhus eMNHXM announcement-bar announcement-bar-critical"
  >
    <div
      class="announcement-bar__text"
    >
      <span>
        <img
          class="advisor-icon"
          src=""
        />
        Enterprise license is expired and some features may be disabled. Please contact your System Administrator for details.
      </span>
    </div>
  </div>
</div>
`;

exports[`components/ConfigurationBar should match snapshot, expiring, cloud license, show nothing 1`] = `<div />`;

exports[`components/ConfigurationBar should match snapshot, expiring, trial license 1`] = `
<div>
  <div
    class="_StyledDiv-BZhus eMNHXM announcement-bar announcement-bar-critical"
  >
    <div
      class="announcement-bar__text"
    >
      <span>
        <div
          class="announcement-bar__configuration"
        >
          <img
            class="advisor-icon"
            src=""
          />
          This is the last day of your free trial. Purchase a license now to continue using Mattermost Professional and Enterprise features.
          <button
            class="btn btn-tertiary btn-xs btn-inverted annnouncementBar__purchaseNow"
          >
            Purchase a License Now
          </button>
        </div>
      </span>
    </div>
    <a
      class="announcement-bar__close"
      href="#"
    >
      ×
    </a>
  </div>
</div>
`;

exports[`components/ConfigurationBar should match snapshot, expiring, trial license, mobile viewport 1`] = `
<div>
  <div
    class="_StyledDiv-BZhus eMNHXM announcement-bar announcement-bar-critical"
  >
    <div
      class="announcement-bar__text"
    >
      <span>
        <div
          class="announcement-bar__configuration"
        >
          <img
            class="advisor-icon"
            src=""
          />
          This is the last day of your free trial.
          <button
            class="btn btn-tertiary btn-xs btn-inverted annnouncementBar__purchaseNow"
          >
            Purchase a License Now
          </button>
        </div>
      </span>
    </div>
    <a
      class="announcement-bar__close"
      href="#"
    >
      ×
    </a>
  </div>
</div>
`;

exports[`components/ConfigurationBar should match snapshot, show nothing 1`] = `<div />`;
